# zoo-recordings-service

./: .gitignore  HELP.md  README.md  pyproject.toml
app/: config.py  database.py  decorators.py  exception_handlers.py  main.py
app/models/: species_recordings_model.py
app/routers/: species.py  species_recordings_router.py
app/schemas/: species_recordings_schema.py
app/services/: __init__.py  species_recordings_service.py
